clean up home page background

--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -1,6 +1,14 @@
 ﻿@page "/"
 
-<style>.page{background-image:"3934588.jpg"}</style>
+<style>
+    body {
+        background-image: url("3934588.jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        background-position-y: -100px;
+        background-color:aquamarine
+    }</style>
 <PageTitle>Home</PageTitle>
 
-<img class="align-content-center" src="3934588.jpg"/>
+
