--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using santacrab2.github.io
 @using santacrab2.github.io.Layout
+@using Blazored  
+@using Blazored.Modal  
+@using Blazored.Modal.Services 
