--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -2,6 +2,8 @@
 <nav class=" sticky top-0 ">
     <a class="text-teal-500 hover:text-black" href="">Piplup.net</a>
     <a href="https://discord.com/invite/vxT5sSHvvn"><img class="w-48 h-18 hover:shadow-lg" style="display:inline;" src="discord-logo-white.png" /></a>
+    <a class="text-teal-500 hover:text-black" href="https://github.com/santacrab2/PKHeX-Plugins/releases/latest"><img style="display:inline" src="icon.ico" />Santa's Auto-Legality Mod</a>
+    <a class="text-teal-500 hover:text-black" href="https://github.com/santacrab2/PKHeXMAUI/releases/latest"><img style="display:inline;" src="iconp.png" />PKHeX Mobile(MAUI)</a>
 </nav>
 
 
