--- a/App.razor
+++ b/App.razor
@@ -1,5 +1,4 @@
-﻿<CascadingBlazoredModal>
-<Router AppAssembly="@typeof(App).Assembly">
+﻿<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
@@ -11,4 +10,3 @@
         </LayoutView>
     </NotFound>
 </Router>
-</CascadingBlazoredModal>
