--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -5,16 +5,17 @@
     body {
         background-image: url("3934588.jpg");
         background-repeat: no-repeat;
-        background-attachment: fixed;
         background-size: cover;
         background-position-y: -100px;
         background-color:aquamarine
     }</style>
+<link rel="stylesheet" href="css/fonts.css">
 <PageTitle>Home</PageTitle>
 <svg width="130" height="300" style="position:absolute; top:215px;left:640px;" xmlns="http://www.w3.org/2000/svg">
     <rect width="80" height="70" fill="#52d3fa" />
 </svg>
 <img src="rotom.png" style="@newpos" @onmouseover="moverotom"/>
+<h1>THE SEA TAVERN</h1>
 
 @code 
 {
