--- a/wwwroot/css/fonts.css
+++ b/wwwroot/css/fonts.css
@@ -7,7 +7,7 @@ h1 {
     font-family: myFirstFont !important;
     position: absolute;
     top: 100%;
-    width: 100%;
+    left: 30%;
     text-align: center;
     font-size: 48px !important;
 }
