--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -4,7 +4,7 @@
 <style>
     body {
         background-image: url("3934588.jpg");
-        background-size: cover;
+        background-size: auto;
         background-repeat:no-repeat;
         background-position-y: -100px;
         background-color:aquamarine;
