--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -4,8 +4,9 @@
 <style>
     body {
         background-image: url("3934588.jpg");
-        background-size: 100%;
+        background-size: cover;
         background-repeat:no-repeat;
+        background-color: darkslategray;
     }</style>
 <link rel="stylesheet" href="css/fonts.css">
 <PageTitle>Home</PageTitle>
