--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -7,6 +7,7 @@
         background-size: cover;
         background-repeat:no-repeat;
         background-color: darkslategray;
+        height: 100vh;
     }</style>
 <link rel="stylesheet" href="css/fonts.css">
 <PageTitle>Home</PageTitle>
