--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -17,7 +17,7 @@
 
 @code 
 {
-    public string newpos = "position:absolute; top:125px; left:50%; ";
+    public string newpos = "position:absolute; top:100%; left:25%; ";
 
     public async Task moverotom()
     {
