--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -36,7 +36,9 @@
 <link rel="stylesheet" href="css/fonts.css">
 <PageTitle>Home</PageTitle>
 <h1>THE SEA TAVERN</h1>
-
+<h1 style="position:absolute; top: 200%; left: 35%; font-size:48px">
+    Under Construction!
+</h1>
 <img src="@imagesource" width="92px" height="72px" opacity="1" style="@newpos" @onmouseover="moverotom" />
 @code 
 {
@@ -55,21 +57,21 @@
         if (refresh)
         {
             imagesource = "rotomflying.gif";
-            newpos = $"position:absolute; top:{ogtoppos}; left:{ogleftpos}; animation-name: myanimation; animation-duration: 5s; animation-fill-mode: forwards;";
+            newpos = $"position:absolute; top:{ogtoppos}; left:{ogleftpos}; animation-name: myanimation; animation-duration: 1s; animation-fill-mode: forwards;";
             refresh = !refresh;
             ogtoppos = toppos;
             ogleftpos = leftpos;
-            await Task.Delay(5000);
+            await Task.Delay(1000);
             imagesource = "rotom.png";
         }
         else
         {
             imagesource = "rotomflying.gif";
-            newpos = $"position:absolute; top:{ogtoppos}; left:{ogleftpos}; animation-name: myanimation2; animation-duration: 5s; animation-fill-mode: forwards;";
+            newpos = $"position:absolute; top:{ogtoppos}; left:{ogleftpos}; animation-name: myanimation2; animation-duration: 1s; animation-fill-mode: forwards;";
             refresh = !refresh;
             ogtoppos = toppos;
             ogleftpos = leftpos;
-            await Task.Delay(5000);
+            await Task.Delay(1000);
             imagesource = "rotom.png";
         }
 
