--- a/wwwroot/css/fonts.css
+++ b/wwwroot/css/fonts.css
@@ -2,7 +2,10 @@
     font-family: myFirstFont;
     src: url(SailorsFatTattooScriptDemoByOutOfStepFontCompany-7B6ql.ttf);
 }
-
+@font-face {
+    font-family: pokefont;
+    src: url(PokemonSolid.ttf);
+}
 h1 {
     font-family: myFirstFont !important;
     position: absolute;
@@ -11,4 +14,3 @@ h1 {
     text-align: center;
     font-size: 48px !important;
 }
-
